machines: Fix gap in Disks list header
Fixes #10751 
Closes #10753

--- a/pkg/machines/machines.less
+++ b/pkg/machines/machines.less
@@ -33,19 +33,13 @@
     white-space: nowrap;
 }
 
-.machines-disks-source {
-    float: right;
-}
-
 .machines-disks-source-descr {
     color: #888888;
-    text-align: right;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
 }
 
 .machines-disks-source-value {
-    text-align: left !important;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
 }
